--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="host_emp">Host Employee :</string>
     <string name="send_otp">Send OTP</string>
     <string name="otp">OTP</string>
+    <string name="resend_otp">Resend OTP</string>
+    <string name="next">Next</string>
 
     <string name="all_req">Sorry all fields are required</string>
 
